@@ -1,21 +1,32 @@
 package com.devonfw.tools.ide.common;
 
+import com.devonfw.tools.ide.context.IdeContext;
+import com.devonfw.tools.ide.os.SystemInfoImpl;
+import com.devonfw.tools.ide.variable.IdeVariables;
+
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
-import com.devonfw.tools.ide.context.IdeContext;
-
 /**
- * Represents the PATH variable in a structured way.
+ * Represents the PATH variable in a structured way. The PATH contains the system path entries together with the entries
+ * for the IDEasy tools. The generic system path entries are stored in a {@link List} ({@code paths}) and the tool
+ * entries are stored in a {@link Map} ({@code tool2pathMap}) as they can change dynamically at runtime (e.g. if a new
+ * tool is installed). As the tools must have priority the actual PATH is build by first the entries for the tools and
+ * then the generic entries from the system PATH. Such tool entries are ignored from the actual PATH of the
+ * {@link System#getenv(String) environment} at construction time and are recomputed from the "software" folder. This is
+ * important as the initial {@link System#getenv(String) environment} PATH entries can come from a different IDEasy
+ * project and the use may have changed projects before calling us again. Recomputing the PATH ensures side-effects from
+ * other projects. However, it also will ensure all the entries to IDEasy locations are automatically managed and
+ * therefore cannot be managed manually be the end-user.
  */
 public class SystemPath {
 
@@ -26,7 +37,7 @@ public class SystemPath {
   private final Map<String, Path> tool2pathMap;
 
   private final List<Path> paths;
-  
+
   private final IdeContext context;
 
   private static final List<String> EXTENSION_PRIORITY = List.of(".exe", ".cmd", ".bat", ".msi", ".ps1", "");
@@ -34,24 +45,47 @@ public class SystemPath {
   /**
    * The constructor.
    *
-   * @param envPath the value of the PATH variable.
-   * @param softwarePath the {@link IdeContext#getSoftwarePath() software path}.
-   * @param context {@link IdeContext} for the output of information.
+   * @param context {@link IdeContext}.
    */
-  public SystemPath(String envPath, Path softwarePath, IdeContext context) {
+  public SystemPath(IdeContext context) {
 
-    this(envPath, softwarePath, File.pathSeparatorChar, context);
+    this(context, System.getenv(IdeVariables.PATH.getName()));
   }
 
   /**
    * The constructor.
    *
+   * @param context {@link IdeContext}.
    * @param envPath the value of the PATH variable.
+   */
+  public SystemPath(IdeContext context, String envPath) {
+
+    this(context, envPath, context.getIdeRoot(), context.getSoftwarePath());
+  }
+
+  /**
+   * The constructor.
+   *
+   * @param context {@link IdeContext} for the output of information.
+   * @param envPath the value of the PATH variable.
+   * @param ideRoot the {@link IdeContext#getIdeRoot() IDE_ROOT}.
+   * @param softwarePath the {@link IdeContext#getSoftwarePath() software path}.
+   */
+  public SystemPath(IdeContext context, String envPath, Path ideRoot, Path softwarePath) {
+
+    this(context, envPath, ideRoot, softwarePath, File.pathSeparatorChar);
+  }
+
+  /**
+   * The constructor.
+   *
+   * @param context {@link IdeContext} for the output of information.
+   * @param envPath the value of the PATH variable.
+   * @param ideRoot the {@link IdeContext#getIdeRoot() IDE_ROOT}.
    * @param softwarePath the {@link IdeContext#getSoftwarePath() software path}.
    * @param pathSeparator the path separator char (';' for Windows and ':' otherwise).
-   * @param context {@link IdeContext} for the output of information.
    */
-  public SystemPath(String envPath, Path softwarePath, char pathSeparator, IdeContext context) {
+  public SystemPath(IdeContext context, String envPath, Path ideRoot, Path softwarePath, char pathSeparator) {
 
     super();
     this.context = context;
@@ -61,15 +95,10 @@ public class SystemPath {
     this.paths = new ArrayList<>();
     String[] envPaths = envPath.split(Character.toString(pathSeparator));
     for (String segment : envPaths) {
-      Path path = Paths.get(segment);
-      String tool = getTool(path, softwarePath);
+      Path path = Path.of(segment);
+      String tool = getTool(path, ideRoot);
       if (tool == null) {
         this.paths.add(path);
-      } else {
-        Path duplicate = this.tool2pathMap.putIfAbsent(tool, path);
-        if (duplicate != null) {
-          context.error("Duplicated tool path for tool: {} at path: {} with duplicated path: {}.", tool, path, duplicate);
-        }
       }
     }
     collectToolPath(softwarePath);
@@ -85,14 +114,14 @@ public class SystemPath {
         Iterator<Path> iterator = children.iterator();
         while (iterator.hasNext()) {
           Path child = iterator.next();
-          if (Files.isDirectory(child)) {
+          String tool = child.getFileName().toString();
+          if (!"extra".equals(tool) && Files.isDirectory(child)) {
             Path toolPath = child;
             Path bin = child.resolve("bin");
             if (Files.isDirectory(bin)) {
               toolPath = bin;
             }
-            this.paths.add(0, toolPath);
-            this.tool2pathMap.put(child.getFileName().toString(), toolPath);
+            this.tool2pathMap.put(tool, toolPath);
           }
         }
       } catch (IOException e) {
@@ -101,13 +130,13 @@ public class SystemPath {
     }
   }
 
-  private static String getTool(Path path, Path softwarePath) {
+  private static String getTool(Path path, Path ideRoot) {
 
-    if (softwarePath == null) {
+    if (ideRoot == null) {
       return null;
     }
-    if (path.startsWith(softwarePath)) {
-      int i = softwarePath.getNameCount();
+    if (path.startsWith(ideRoot)) {
+      int i = ideRoot.getNameCount();
       if (path.getNameCount() > i) {
         return path.getName(i).toString();
       }
@@ -117,7 +146,11 @@ public class SystemPath {
 
   private Path findBinaryInOrder(Path path, String tool) {
 
-    for (String extension : EXTENSION_PRIORITY) {
+    List<String> extensionPriority = List.of("");
+    if (SystemInfoImpl.INSTANCE.isWindows()) {
+      extensionPriority = EXTENSION_PRIORITY;
+    }
+    for (String extension : extensionPriority) {
 
       Path fileToExecute = path.resolve(tool + extension);
 
@@ -129,11 +162,25 @@ public class SystemPath {
     return null;
   }
 
+  /**
+   * @param toolPath the {@link Path} to the tool installation.
+   * @return the {@link Path} to the binary executable of the tool. E.g. is "software/mvn" is given
+   * "software/mvn/bin/mvn" could be returned.
+   */
   public Path findBinary(Path toolPath) {
+
     Path parent = toolPath.getParent();
     String fileName = toolPath.getFileName().toString();
 
     if (parent == null) {
+
+      for (Path path : tool2pathMap.values()) {
+        Path binaryPath = findBinaryInOrder(path, fileName);
+        if (binaryPath != null) {
+          return binaryPath;
+        }
+      }
+
       for (Path path : this.paths) {
         Path binaryPath = findBinaryInOrder(path, fileName);
         if (binaryPath != null) {
@@ -153,7 +200,7 @@ public class SystemPath {
   /**
    * @param tool the name of the tool.
    * @return the {@link Path} to the directory of the tool where the binaries can be found or {@code null} if the tool
-   *         is not installed.
+   * is not installed.
    */
   public Path getPath(String tool) {
 
@@ -177,7 +224,7 @@ public class SystemPath {
 
   /**
    * @param bash - {@code true} to convert the PATH to bash syntax (relevant for git-bash or cygwin on windows),
-   *        {@code false} otherwise.
+   * {@code false} otherwise.
    * @return this {@link SystemPath} as {@link String} for the PATH environment variable.
    */
   public String toString(boolean bash) {
@@ -198,22 +245,45 @@ public class SystemPath {
     return sb.toString();
   }
 
-  private void appendPath(Path path, StringBuilder sb, char separator, boolean bash) {
+  private static void appendPath(Path path, StringBuilder sb, char separator, boolean bash) {
 
     if (sb.length() > 0) {
       sb.append(separator);
     }
     String pathString = path.toString();
     if (bash && (pathString.length() > 3) && (pathString.charAt(1) == ':')) {
-      char slash = pathString.charAt(2);
-      if ((slash == '\\') || (slash == '/')) {
-        char drive = Character.toLowerCase(pathString.charAt(0));
-        if ((drive >= 'a') && (drive <= 'z')) {
-          pathString = "/" + drive + pathString.substring(2).replace('\\', '/');
-        }
-      }
+      pathString = convertWindowsPathToUnixPath(pathString);
     }
     sb.append(pathString);
   }
 
+  /**
+   * Method to convert a valid Windows path string representation to its corresponding one in Unix format.
+   *
+   * @param pathString The Windows path string to convert.
+   * @return The converted Unix path string.
+   */
+  public static String convertWindowsPathToUnixPath(String pathString) {
+
+    char slash = pathString.charAt(2);
+    if ((slash == '\\') || (slash == '/')) {
+      char drive = Character.toLowerCase(pathString.charAt(0));
+      if ((drive >= 'a') && (drive <= 'z')) {
+        pathString = "/" + drive + pathString.substring(2).replace('\\', '/');
+      }
+    }
+    return pathString;
+  }
+
+  /**
+   * Method to validate if a given path string is a Windows path or not
+   *
+   * @param pathString The string to check if it is a Windows path string.
+   * @return {@code true} if it is a valid windows path string, else {@code false}.
+   */
+  public static boolean isValidWindowsPath(String pathString) {
+
+    String windowsFilePathRegEx = "([a-zA-Z]:)?(\\\\[a-zA-Z0-9\\s_.-]+)+\\\\?";
+    return Pattern.matches(windowsFilePathRegEx, pathString);
+  }
 }
