@@ -1,8 +1,9 @@
 package com.devonfw.tools.ide.tool.az;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Set;
 
+import com.devonfw.tools.ide.common.Tag;
 import com.devonfw.tools.ide.context.IdeContext;
 import com.devonfw.tools.ide.environment.EnvironmentVariables;
 import com.devonfw.tools.ide.environment.EnvironmentVariablesType;
@@ -22,7 +23,7 @@ public class Azure extends LocalToolCommandlet {
    */
   public Azure(IdeContext context) {
 
-    super(context, "az", Set.of(TAG_CLOUD));
+    super(context, "az", Set.of(Tag.CLOUD));
   }
 
   @Override
@@ -34,6 +35,6 @@ public class Azure extends LocalToolCommandlet {
     EnvironmentVariables typeVariables = variables.getByType(EnvironmentVariablesType.CONF);
     typeVariables.set("AZURE_CONFIG_DIR", this.context.getConfPath().resolve(".azure").toString(), true);
     typeVariables.save();
-    this.context.getFileAccess().symlink(Paths.get("wbin"), this.getToolPath().resolve("bin"));
+    this.context.getFileAccess().symlink(Path.of("wbin"), getToolPath().resolve("bin"));
   }
 }
